# argus

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  lint.yml  test.yml
docs/: ARCHITECTURE.md
extension/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
extension/src/: types.ts
extension/src/background/: index.ts
extension/src/content/: index.ts
extension/src/injected/: index.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/tests/: content-buffer.test.ts  event-contracts.test.ts  page-functions.test.ts  setup.ts
server/: pyproject.toml
server/src/argus/: __init__.py  __main__.py  config.py  main.py
server/src/argus/api/: middleware.py  pairing.py  routes.py  server.py
server/src/argus/core/: baselines.py  commands.py  dedup.py  filters.py  image.py  models.py  stack_parser.py
server/src/argus/mcp/: tools.py
server/src/argus/security/: sanitizer.py
server/src/argus/store/: base.py  memory.py
server/tests/: conftest.py  test_api.py  test_baselines.py  test_commands.py  test_dedup.py  test_e2e.py  test_filters.py  test_mcp_tools.py  test_models.py  test_pairing.py  test_sanitizer.py  test_stack_parser.py  test_store.py
